--- a/src/styles/training-table.css
+++ b/src/styles/training-table.css
@@ -1,9 +1,15 @@
 table {
-  /* this circumvents the collapse of the right border on mobile */
-  width: 99.5%;
+  /* this is necessary on mobile to prevent border collapsing in table */
+  width: calc(100% - 2px);
   padding: 8px;
   border: 1px solid #e5e5e5;
   border-radius: 4px;
+}
+
+@media only screen and (min-width: 560px) {
+  table {
+    width: 100%;
+  }
 }
 
 th {
